--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">掌上西科</string>
     <!-- 网站首页 -->
-    <string name="home_url">https://swust.aliceblog.co/#/</string>
+    <string name="home_url">http://124.220.158.71:82/#/</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
